# fastapi_basic_template

./: .dockerignore  .env.template  Dockerfile  README.md  alembic.ini  docker-compose.yaml  pyproject.toml
src/task_manager/: __main__.py
src/task_manager/adapters/protocols/: database.py
src/task_manager/adapters/sqlalchemy_db/: gateway.py
src/task_manager/api/: index_router.py  tasks_router.py  users_router.py
src/task_manager/database/protocols/: database.py
src/task_manager/database/sqlalchemy_db/: gateway.py
src/task_manager/database/sqlalchemy_db/migrations/: env.py
src/task_manager/database/sqlalchemy_db/migrations/versions/: 20240504-211516_bf9e382d7074_added_initial_table.py
src/task_manager/domain/schemas/: task_schemas.py
src/task_manager/domain/services/: tasks_services.py
src/task_manager/main/: celery_worker.py  config.py  di_provider.py  fastapi_users_di.py  web.py
tests/: conftest.py  test_endpoints.py  test_services.py
